# ynab-obsidian

./: .gitignore  README.md  config.template.yaml  main.py  pyproject.toml
scripts/: AccountQueries.js  Dollars.js  FiCharts.js  FiNumberQueries.js  IncomeQueries.js  InvestmentAccountQueries.js  MortgageQueries.js  NetWorthCharts.js  NetWorthQueries.js  PayslipQueries.js  RealEstateQueries.js  SavingsRateQueries.js  SpendingCharts.js  SpendingQueries.js  TableUtils.js  YearMonthKey.js  package.json
ynab_obsidian/: account_snapshots.py  app_config.py  main.py  note_sync.py  server_knowledge.py  transactions.py  util.py  vault.py
